@@ -28,7 +28,9 @@ class Smarty_Internal_Compile_Foreach extends Smarty_Internal_CompileBase {
         // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        $this->_open_tag('foreach');
+        $this->_open_tag('foreach', array('foreach',$this->compiler->nocache));
+		// maybe nocache because of nocache variables
+		$this->compiler->nocache = $this->compiler->nocache | $this->compiler->tag_nocache;
 
         $from = $_attr['from'];
         $item = $_attr['item'];
