@@ -27,7 +27,9 @@ class Smarty_Internal_Compile_Section extends Smarty_Internal_CompileBase {
         // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        $this->_open_tag('section');
+        $this->_open_tag('section', array('section',$this->compiler->nocache));
+		// maybe nocache because of nocache variables
+		$this->compiler->nocache = $this->compiler->nocache | $this->compiler->tag_nocache;
 
         $output = "<?php ";
 
