@@ -25,7 +25,12 @@ class Smarty_Internal_Compile_While extends Smarty_Internal_CompileBase {
         $this->required_attributes = array('if condition'); 
         // check and get attributes
         $_attr = $this->_get_attributes($args);
-        $this->_open_tag('while');
+        $this->_open_tag('while', $this->compiler->nocache);
+
+        // maybe nocache because of nocache variables
+		$this->compiler->nocache = $this->compiler->nocache | $this->compiler->tag_nocache;
+
+		
         if (is_array($args['if condition'])) {
             $_output = " <?php if (!isset(\$_smarty_tpl->tpl_vars[".$args['if condition']['var']."])) \$_smarty_tpl->tpl_vars[".$args['if condition']['var']."] = new Smarty_Variable;\n";
             $_output .= " while (\$_smarty_tpl->tpl_vars[".$args['if condition']['var']."]->value = ".$args['if condition']['value'].") {\n ?>";
